mail-sender/src/main/java/com/example/mailsender/error/ErrorResponse.java
package com.example.mailsender.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class ErrorResponse {
    private String message;
}
